compiler/test-data/parser/scheme/errors/missing_colon.frel
module scheme.errors.missing_colon

scheme User {
    name String
}
